fix gallery view on mobile

--- a/src/style/layout/_containers.scss
+++ b/src/style/layout/_containers.scss
@@ -78,12 +78,11 @@ footer {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  height: 100vh;
+  height: 300vh;
 
   div {
     background-position: center;
-    width: 100%;
-    height: auto;
+    width: 100vw;
     filter: brightness(60%);
 
     &:hover {
@@ -92,7 +91,7 @@ footer {
     }
 
     @media #{$desktop} {
-      width: 50%;
+      width: 50vw;
       height: auto;
     }
 
@@ -104,7 +103,7 @@ footer {
       background-image: url($image-path + '/image2.jpeg');
 
       @media #{$desktop} {
-        width: 25%;
+        width: 25vw;
       }
     }
 
@@ -112,7 +111,7 @@ footer {
       background-image: url($image-path + '/image3.jpeg');
 
       @media #{$desktop} {
-        width: 25%;
+        width: 25vw;
       }
     }
 
@@ -120,7 +119,7 @@ footer {
       background-image: url($image-path + '/image4.jpeg');
 
       @media #{$desktop} {
-        width: 25%;
+        width: 25vw;
       }
     }
 
@@ -128,7 +127,7 @@ footer {
       background-image: url($image-path + '/image5.jpeg');
 
       @media #{$desktop} {
-        width: 25%;
+        width: 25vw;
       }
     }
 
